# prettiest

./: .gitignore  Cargo.toml  README.md  notes.md
fast_wadler/: .gitignore  Benchmark.hs  Chitil.hs  Dequeue.hs  GenT.hs  Generator.hs  Kiselyov.hs  Pombrio.hs  PombrioSuffix.hs  README.md  RunPretty.hs  Swierstra.hs  Wadler.hs  benchmark  benchmark.hs  benchmark.txt  lazy_dequeue.hs  output.txt  prettier.hs  profile.sh  run.sh  run_benchmark.sh  run_prettier.sh  run_tests.sh
fast_wadler/strict/: .gitignore  Pombrio.ml  StrictWadler.ml  StrictWadler2.ml
impl/src/: generators.rs.bak  infra.rs  pretty_xml.rs  space.rs
impl/tests/tests/: basic_tests.rs  regression_tests.rs  xml_tests.rs
notes/: citations.txt  lazy_dequeue.hs  linear_time.hs  notes.md  prettier.hs  run_prettier.sh
oracle_impl/: pretty.hs
refn_impl/: pretty.hs  pretty.ml  pretty2.ml  scratch.ml
src/: doc.rs  doc_generator.rs  generators.rs  lib.rs  line_lens.rs  measure.rs  node.rs  oracle.rs  pretty_json.rs  pretty_xml.rs  printer.rs  shapes.rs  space.rs  util.rs
tests/: basics.rs  run_tests.rs
tests/tests/: basic_tests.rs  json_tests.rs  mod.rs  oracle_tests.rs  regression_tests.rs
tests/tests/common/: assertions.rs  doc_generator.rs  generators.rs  mod.rs
tests_bak/: basics.rs  json.rs
tests_bak/common/: mod.rs
