[package]
name = "prettiest"
version = "0.1.0"
authors = ["Justin Pombrio <zallambo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
no-nonsense-flamegraphs = { git = "https://github.com/justinpombrio/no-nonsense-flamegraphs", optional = true }

[features]
logging = []
flamegraph = ["no-nonsense-flamegraphs"]
oracle = []

[dev-dependencies]
permutation_iterator = "0.1.*"
